# CRUD-Terminal-Mangemen-Karyawan-C-

./: CMakeLists.txt  README.md  main.cpp
BusniessLogic/: addDataKaryawan.cpp  busniessLogic.h  deleteDataKaryawan.cpp  editDataKaryawan.cpp
Helper/: clearFunction.cpp  enterFunction.cpp
Views/: login.cpp  views.h  viewsDataDetail.cpp  viewsDataList.cpp
dataBase/: dataBase.txt
helper/: clear.cpp  enter.cpp  helper.h  helper.h.gch
model/: managemenKaryawan.h
